--- a/DevNet-Professional/DevOps/docker/labs/lab06/net_inventory/docker-compose.yml
+++ b/DevNet-Professional/DevOps/docker/labs/lab06/net_inventory/docker-compose.yml
@@ -8,23 +8,43 @@ services:
       dockerfile: "Dockerfile_db"
     ports:
       - "5432:5432"
-    environment:
-      POSTGRES_DB: 'net_inventory'
-      POSTGRES_USER: 'root'
-      POSTGRES_PASSWORD: 'Cisco123'
+    env_file: env_file_db
+    networks:
+      - backend_network
 
   netinv_backend:
     build:
       context: . 
       dockerfile: "Dockerfile_backend"
     restart: always
-    environment:
-      ENV: "BACKEND"
-      SECRET_KEY: 'aj8j6PIbaJpJXBS8jjvcylT84G+1UhxjXQFz6pJPNuQ='
-      SQLALCHEMY_DATABASE_URI: 'postgresql+psycopg2://root:Cisco123@netinv_db/net_inventory'
+    env_file: env_file_backend
     volumes:
       - .:/app
     ports:
      - "5001:5001"
     depends_on:
       - netinv_db
+    networks:
+      - backend_network
+      - frontend_network
+  
+  netinv_frontend:
+    build:
+      context: . 
+      dockerfile: "Dockerfile_frontend"
+    restart: always
+    env_file: env_file_frontend
+    volumes:
+      - .:/app
+    ports:
+     - "5000:5000"
+    depends_on:
+      - netinv_backend
+    networks:
+      - frontend_network
+
+networks:
+  backend_network:
+    driver: bridge
+  frontend_network:
+    driver: bridge
