--- a/DevNet-Professional/DevOps/docker/labs/lab11/asa1/bgp.yml
+++ b/DevNet-Professional/DevOps/docker/labs/lab11/asa1/bgp.yml
@@ -1,9 +1,9 @@
 ---
-local_as: 
+local_as: 65004
 neighbors:
-  - ip: 
-    remote_as: 
+  - ip: 10.10.4.1
+    remote_as: 65003
 advertised_networks:
-  - ip: 
-    mask: 
+  - ip: 10.10.3.0
+    mask: 24
 
