--- a/DevNet-Professional/DevOps/docker/labs/lab11/asa1/interfaces.yml
+++ b/DevNet-Professional/DevOps/docker/labs/lab11/asa1/interfaces.yml
@@ -1,15 +1,15 @@
 ---
 GigabitEthernet0/0:
-  zone:
-    name: 
-    security_level: 
-  ip_address:
-    ip: 
-    mask: 
+  zone: 
+    name: inside
+    security_level: 100
+  ip_address: 
+    ip: 10.10.4.254
+    mask: 24
 GigabitEthernet0/1:
   zone:
-    name: 
-    security_level: 
+    name: outside
+    security_level: 0
   ip_address:
-    ip: 
-    mask: 
+    ip: 10.10.3.1
+    mask: 24
