--- a/DevNet-Professional/DevOps/docker/labs/lab11/asa1/policies.yml
+++ b/DevNet-Professional/DevOps/docker/labs/lab11/asa1/policies.yml
@@ -1,24 +1,24 @@
 ---
 INSIDE:
-  interface: 
+  interface: inside
   policies:
-    - action: 
-      protocol: 
+    - action: permit
+      protocol: icmp
       source:
-        ip: 
-        mask: 
+        ip: 10.10.0.0
+        mask: 22
       destination:
-        ip: 
-        mask: 
+        ip: 10.10.3.0
+        mask: 24
 OUTSIDE:
-  interface: 
+  interface: outside
   policies:
-    - action: 
-      protocol: 
-      source:
-        ip: 
-        mask: 
+    - action: permit
+      protocol: icmp
+      source: 
+        ip: 10.10.3.0
+        mask: 24
       destination:
-        ip: 
-        mask: 
+        ip: 10.10.0.0
+        mask: 22
 
